add dependency & update javafx