@@ -6,16 +6,19 @@ plugins {
 }
 
 javafx {
-    version = "21"
+    version = "26"
     modules = listOf("javafx.controls")
 }
 
 dependencies {
     implementation("io.github.mkpaz:atlantafx-base:2.1.0")
+    implementation("org.kordamp.ikonli:ikonli-javafx:12.4.0") // icons for app
+    implementation("org.kordamp.ikonli:ikonli-material2-pack:12.4.0") // material2 icon pack
 }
 
 application {
     mainClass.set("com.project.app.Main")
+    applicationDefaultJvmArgs = listOf("--enable-native-access=javafx.graphics")
 }
 
 tasks.named<JavaExec>("run") {
